@@ -12,7 +12,7 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
-import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
 
@@ -27,9 +27,6 @@ import net.minecraftforge.common.util.ForgeDirection;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ListMultimap;
-import com.google.common.collect.MultimapBuilder;
-import com.google.common.collect.Multimaps;
 import com.gtnewhorizon.gtnhlib.util.data.BlockSupplier;
 import com.gtnewhorizon.gtnhlib.util.data.ImmutableBlockMeta;
 import com.gtnewhorizon.gtnhlib.util.data.LazyBlock;
@@ -45,9 +42,7 @@ import gregtech.api.interfaces.IStoneCategory;
 import gregtech.api.interfaces.IStoneType;
 import gregtech.api.interfaces.ITexture;
 import gregtech.api.render.TextureFactory;
-import gregtech.api.util.GTDataUtils;
 import gregtech.api.util.GTOreDictUnificator;
-import it.unimi.dsi.fastutil.Pair;
 
 public enum StoneType implements IStoneType {
 
@@ -187,10 +182,6 @@ public enum StoneType implements IStoneType {
     // spotless:on
 
     public static final List<StoneType> STONE_TYPES = ImmutableList.copyOf(values());
-    public static final List<StoneType> VISUAL_STONE_TYPES = ImmutableList.copyOf(
-        Arrays.stream(values())
-            .filter(s -> s.builder.enabled && !s.isExtraneous())
-            .toArray(StoneType[]::new));
 
     public static final List<IStoneType> STONE_ONLY = ImmutableList.of(StoneType.Stone);
     public static final List<IStoneType> STONES = ImmutableList.copyOf(
@@ -203,17 +194,11 @@ public enum StoneType implements IStoneType {
             .toArray(StoneType[]::new));
 
     public static final ImmutableMap<OrePrefixes, List<StoneType>> STONE_TYPES_BY_PREFIX;
-
+    public static final StoneType[] VALUES = StoneType.values();
     static {
-        Supplier<ListMultimap<OrePrefixes, StoneType>> mapMaker = () -> MultimapBuilder.hashKeys()
-            .arrayListValues()
-            .build();
-
-        var map = StoneType.STONE_TYPES.stream()
-            .map(s -> Pair.of(s.builder.oreBlockPrefix, s))
-            .collect(GTDataUtils.toMultiMap(mapMaker));
-
-        STONE_TYPES_BY_PREFIX = ImmutableMap.copyOf(Multimaps.asMap(map));
+        STONE_TYPES_BY_PREFIX = ImmutableMap.copyOf(
+            StoneType.STONE_TYPES.stream()
+                .collect(Collectors.groupingBy(s -> s.builder.oreBlockPrefix)));
     }
 
     private final StoneBuilder builder;
@@ -394,11 +379,30 @@ public enum StoneType implements IStoneType {
             || builder.allowedDimensions.contains(DimensionDef.getDimensionName(world));
     }
 
+    /**
+     * Finds the stone type for the block at the given position, considering only types that can generate in
+     * this dimension so blocks claimed by several dimension-scoped types resolve to the one valid here.
+     */
     @Nullable
     public static StoneType findStoneType(World world, int x, int y, int z) {
-        return findStoneType(world.getBlock(x, y, z), world.getBlockMetadata(x, y, z));
+        Block block = world.getBlock(x, y, z);
+        if (block == Blocks.air) return null;
+
+        int meta = world.getBlockMetadata(x, y, z);
+
+        for (int i = 0, stoneTypesSize = STONE_TYPES.size(); i < stoneTypesSize; i++) {
+            StoneType stoneType = STONE_TYPES.get(i);
+            if (stoneType.builder.enabled && stoneType.canGenerateInWorld(world) && stoneType.contains(block, meta)) {
+                return stoneType;
+            }
+        }
+
+        return null;
     }
 
+    /**
+     * Finds the stone type for a block, ignoring dimension constraints. Returns the first match by enum order.
+     */
     @Nullable
     public static StoneType findStoneType(Block block, int meta) {
         if (block == Blocks.air) return null;
@@ -418,7 +422,7 @@ public enum StoneType implements IStoneType {
 
         if (options.isEmpty()) return null;
 
-        return options.get(0);
+        return options.getFirst();
     }
 
     private static class StoneBuilder {
